deploy/k8s/app/redirect-https.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: falzo
  labels:
    app.kubernetes.io/name: falzo
    app.kubernetes.io/part-of: falzo
spec:
  redirectScheme:
    scheme: https
    permanent: true
